<resources>
    <string name="app_name">Contacts</string>
    <string name="contact_name_placeholder">Name is not set</string>
    <string name="contact_number_placeholder">Phone number is not set</string>
    <string name="rationale_dialog_title">Attention!</string>
    <string name="contacts_permission_explanation">The application needs to access your contacts to display them.</string>
    <string name="exit">Exit</string>
    <string name="proceed">Proceed</string>
    <string name="buttonCall">Call</string>
    <string name="buttonSendSMS">SMS</string>
    <string name="sms">SMS</string>
    <string name="permission_denied_call">Call permission denied</string>
    <string name="call_permission_explanation">The application needs permission to make phone calls. It will not initiate calls without explicit user intention.</string>
    <string name="permission_denied_sms">Message permission denied</string>
    <string name="sms_permission_explanation">The application needs permission to send messages. It will not send the message without explicit user intention.</string>
</resources>